--- a/Python_notebook.ipynb
+++ b/Python_notebook.ipynb
@@ -525,6 +525,658 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 2.1.2 Floating Point (float)\n",
+    "Definition:\n",
+    "Floating-point numbers represent real numbers that contain a fractional part. These numbers are written with a decimal point, even if the decimal part is zero (e.g., 1.0).\n",
+    "Floats can represent positive and negative real numbers, including zero.\n",
+    "\n",
+    "Precision: Floats have a precision limit due to their binary representation, which can lead to rounding errors in some cases.\n",
+    "\n",
+    "Performance: Operations with floats may be slightly slower than with integers due to the need for handling decimal places."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14 -2.718 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Examples of floats\n",
+    "x = 3.14\n",
+    "y = -2.718\n",
+    "z = 0.0\n",
+    "\n",
+    "print(x, y, z)  # Output: 3.14 -2.718 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Basic Operations:\n",
+    "Floats support all the basic arithmetic operations like integers, but they also include fractional results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Addition: 14.7\n",
+      "Subtraction: 6.3\n",
+      "Multiplication: 44.1\n",
+      "Division: 2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Arithmetic operations with floats\n",
+    "a = 10.5\n",
+    "b = 4.2\n",
+    "\n",
+    "print(\"Addition:\", a + b)            # Output: 14.7\n",
+    "print(\"Subtraction:\", a - b)         # Output: 6.3\n",
+    "print(\"Multiplication:\", a * b)      # Output: 44.1\n",
+    "print(\"Division:\", a / b)            # Output: 2.5\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Rounding and Truncating:\n",
+    "Rounding is used to reduce the number of decimal places in a float.\n",
+    "Python provides built-in functions like round(), floor(), and ceil() from the math module to handle rounding."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "# Rounding to the nearest integer\n",
+    "rounded_value = round(3.14159, 2)  # Round to 2 decimal places\n",
+    "print(rounded_value)  # Output: 3.14\n",
+    "\n",
+    "# Floor and Ceil\n",
+    "print(math.floor(3.7))  # Output: 3 (rounds down)\n",
+    "print(math.ceil(3.2))   # Output: 4 (rounds up)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Scientific Notation:\n",
+    "Floats can be represented using scientific notation in Python, especially useful for representing very large or very small numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1500.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Scientific notation\n",
+    "sci_float = 1.5e3  # Equivalent to 1.5 * 10^3\n",
+    "print(sci_float)  # Output: 1500.0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Type Conversion:\n",
+    "Python allows conversion between floats and other data types (like integers and strings) using float()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "3.14159\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Converting from integer to float\n",
+    "int_value = 10\n",
+    "float_value = float(int_value)\n",
+    "print(float_value)  # Output: 10.0\n",
+    "\n",
+    "# Converting string to float\n",
+    "str_value = \"3.14159\"\n",
+    "float_from_str = float(str_value)\n",
+    "print(float_from_str)  # Output: 3.14159\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Imprecision in Floats:\n",
+    "Floating-point numbers are represented in binary, which can cause rounding errors due to the limited precision of binary numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.30000000000000004\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of imprecision\n",
+    "result = 0.1 + 0.2\n",
+    "print(result)  # Output: 0.30000000000000004 (small imprecision due to floating-point arithmetic)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Floating-Point Limits:\n",
+    "Python floats are represented in double precision (64 bits), meaning they can handle very large numbers, but they still have limits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7976931348623157e+308\n",
+      "2.2250738585072014e-308\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Maximum float value\n",
+    "import sys\n",
+    "print(sys.float_info.max)  # Output: 1.7976931348623157e+308\n",
+    "\n",
+    "# Minimum positive float value\n",
+    "print(sys.float_info.min)  # Output: 2.2250738585072014e-308\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Comparing Floats:\n",
+    "Due to imprecision, comparing floats directly can lead to errors. It's better to compare floats by checking if their difference is within a small tolerance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The numbers are approximately equal\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comparing floats with a tolerance\n",
+    "a = 0.1 + 0.2\n",
+    "b = 0.3\n",
+    "\n",
+    "# Using a tolerance for comparison\n",
+    "tolerance = 1e-9\n",
+    "if abs(a - b) < tolerance:\n",
+    "    print(\"The numbers are approximately equal\")\n",
+    "else:\n",
+    "    print(\"The numbers are not equal\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Common Functions for Floats:\n",
+    "round(x, n): Rounds the float x to n decimal places.\n",
+    "abs(x): Returns the absolute value of the float.\n",
+    "math.isinf(x): Checks if x is infinite.\n",
+    "math.isnan(x): Checks if x is NaN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inf -inf\n",
+      "nan\n",
+      "3.14159\n",
+      "-3.14\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Infinity\n",
+    "pos_inf = float('inf')\n",
+    "neg_inf = float('-inf')\n",
+    "print(pos_inf, neg_inf)  # Output: inf -inf\n",
+    "\n",
+    "# Not a Number (NaN)\n",
+    "nan_value = float('nan')\n",
+    "print(nan_value)  # Output: nan\n",
+    "\n",
+    "# Examples of common float functions\n",
+    "num = -3.14159\n",
+    "\n",
+    "# Absolute value\n",
+    "print(abs(num))  # Output: 3.14159\n",
+    "\n",
+    "# Rounding to 2 decimal places\n",
+    "print(round(num, 2))  # Output: -3.14\n",
+    "\n",
+    "# Check if number is infinite or NaN\n",
+    "print(math.isinf(pos_inf))  # Output: True\n",
+    "print(math.isnan(nan_value))  # Output: True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Non Primitive Type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These data types are more complex than primitive types and typically involve collections or groups of elements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.1 Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Lists in Python**\n",
+    "\n",
+    "**Definition**:\n",
+    "A list is an ordered, mutable collection of elements, where each element can be of any data type.\n",
+    "Lists are defined using square brackets ([]), and elements are separated by commas.\n",
+    "Syntax: my_list = [element1, element2, element3]\n",
+    "\n",
+    "**Memory Management**:\n",
+    "Lists in Python are implemented as dynamic arrays. When more space is needed, Python automatically allocates more memory to avoid frequent resizing.\n",
+    "This allocation ensures amortized O(1) performance for append operations.\n",
+    "You can check the memory usage of a list with sys.getsizeof().\n",
+    "Lists allocate more memory than required for the current number of elements to optimize append operations.\n",
+    "\n",
+    "**Performance**:\n",
+    "Indexing: O(1)\n",
+    "Appending: O(1) (amortized)\n",
+    "Inserting/Deleting: O(n) (inserting or removing elements at an arbitrary index requires shifting elements)\n",
+    "Slicing: O(k) (where k is the size of the slice)\n",
+    "\n",
+    "**Best Practices**:\n",
+    "Use list comprehensions for concise, readable, and efficient list operations.\n",
+    "Avoid modifying lists while iterating over them—use a new list instead.\n",
+    "Prefer sorted() over sort() when you need a non-mutating sorting operation.\n",
+    "Use in for fast membership checks in small lists.\n",
+    "\n",
+    "**Memory Optimization**:\n",
+    "For homogeneous data types, consider using Python’s array module for more memory-efficient storage.\n",
+    "Example: from array import array."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### (Part 1): Basic Structure, Access, and Slicing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Creating Lists\n",
+    "A list in Python is a collection of elements, each identified by an index.\n",
+    "Lists can hold elements of any data type, including other lists (nested lists)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2.0, 'x']\n",
+      "[10, 20, 30, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "element1 = 1\n",
+    "element2 = 2.0\n",
+    "element3 = 'x'\n",
+    "# Creating a list\n",
+    "my_list = [element1, element2, element3]\n",
+    "print(my_list)\n",
+    "\n",
+    "# Example\n",
+    "numbers = [10, 20, 30, 40]\n",
+    "print(numbers)  # Output: [10, 20, 30, 40]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Empty List: You can create an empty list using square brackets [] or the list() constructor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "empty_list = []\n",
+    "empty_list_via_constructor = list()\n",
+    "\n",
+    "print(empty_list)               # Output: []\n",
+    "print(empty_list_via_constructor)  # Output: []\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Accessing List Elements\n",
+    "Elements in a list can be accessed using their index, starting from 0 for the first element.\n",
+    "Negative indices can be used to access elements starting from the last element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Accessing elements by index\n",
+    "my_list = [1, 2, 3, 4, 5]\n",
+    "first_element = my_list[0]  # Output: 1\n",
+    "second_element = my_list[1]  # Output: 2\n",
+    "\n",
+    "# Accessing the last element using negative indexing\n",
+    "last_element = my_list[-1]  # Output: 5\n",
+    "second_last_element = my_list[-2]  # Output: 4\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- IndexError:\n",
+    "Accessing an index outside the valid range of a list results in an IndexError."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23352/1195675040.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmy_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# Output: IndexError: list index out of range\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1, 2, 3]\n",
+    "print(my_list[5])  # Output: IndexError: list index out of range\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. List Slicing\n",
+    "Slicing allows you to access a subset of elements from the list.\n",
+    "The slicing syntax is: list[start:stop:step], where:\n",
+    "start: The index where the slice starts (inclusive).\n",
+    "stop: The index where the slice ends (exclusive).\n",
+    "step: The interval at which elements are taken (optional)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Basic Slicing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 30, 40]\n",
+      "[30, 40, 50]\n",
+      "[10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [10, 20, 30, 40, 50]\n",
+    "\n",
+    "# Slice from index 1 to 3 (end index is exclusive)\n",
+    "sublist = my_list[1:4]  # Output: [20, 30, 40]\n",
+    "print(sublist)\n",
+    "\n",
+    "# Slice from index 2 to the end\n",
+    "sublist = my_list[2:]  # Output: [30, 40, 50]\n",
+    "print(sublist)\n",
+    "\n",
+    "# Slice from the start to index 3\n",
+    "sublist = my_list[:3]  # Output: [10, 20, 30]\n",
+    "print(sublist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Slicing with Step:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List slicing with a step of 2\n",
+    "my_list = [10, 20, 30, 40, 50, 60]\n",
+    "\n",
+    "# Slice every second element\n",
+    "sublist = my_list[::2]  # Output: [10, 30, 50]\n",
+    "\n",
+    "# Slice with a negative step (reverse the list)\n",
+    "reversed_list = my_list[::-1]  # Output: [60, 50, 40, 30, 20, 10]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Slicing Edge Cases:\n",
+    "If start is greater than or equal to stop, the result will be an empty list.\n",
+    "If no start or stop is provided, Python assumes the beginning and end of the list, respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1, 2, 3, 4]\n",
+    "\n",
+    "# start >= stop\n",
+    "print(my_list[3:1])  # Output: []\n",
+    "\n",
+    "# No start or stop\n",
+    "print(my_list[:])  # Output: [1, 2, 3, 4]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Reverse list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1, 2, 3, 4]\n",
+    "rev_list = my_list[::-1]\n",
+    "\n",
+    "print(rev_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### (Part 2): Modifying, Adding, and Removing Elements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Control Flow Statements"
    ]
   },
@@ -599,7 +1251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
